WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83455
DFG should not load the property storage if it is inline.
https://bugs.webkit.org/show_bug.cgi?id=83455
Summary
DFG should not load the property storage if it is inline.
Filip Pizlo
Reported
2012-04-08 23:19:54 PDT
Patch forthcoming.
Attachments
the patch
(5.07 KB, patch)
2012-04-08 23:26 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(5.06 KB, patch)
2012-04-08 23:33 PDT
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-04-08 23:26:01 PDT
Created
attachment 136187
[details]
the patch
WebKit Review Bot
Comment 2
2012-04-08 23:29:12 PDT
Attachment 136187
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:1888: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2012-04-08 23:33:37 PDT
Created
attachment 136188
[details]
the patch Fixed style
Filip Pizlo
Comment 4
2012-04-09 00:48:34 PDT
Landed in
http://trac.webkit.org/changeset/113557
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug