Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp
@@ -68,12 +68,26 @@ GPRReg SpeculativeJIT::fillStorage(NodeIndex nodeIndex)
         return gpr;
     }
         
-    case DataFormatStorage: {
+    case DataFormatStorage:
+    case DataFormatCell: {
         GPRReg gpr = info.gpr();
         m_gprs.lock(gpr);
         return gpr;
     }
         
+    case DataFormatJS:
+    case DataFormatJSCell: {
+#if USE(JSVALUE64)
+        GPRReg gpr = info.gpr();
+        m_gprs.lock(gpr);
+        return gpr;
+#else
+        GPRReg gpr = info.payloadGPR();
+        m_gprs.lock(gpr);
+        return gpr;
+#endif
+    }
+
     default:
         ASSERT_NOT_REACHED();
     }
